<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashScreenFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="uz.mbr.novustest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="uz.mbr.novustest.ui.order.OrdersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_navigation_order_to_orderHistoryFragment"
            app:destination="@id/orderHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="uz.mbr.novustest.ui.statistics.StatisticsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="uz.mbr.novustest.ui.SplashScreenFragment"
        android:label="fragment_splash_screen"
        tools:layout="@layout/fragment_splash_screen">

        <action
            android:id="@+id/action_splashScreenFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="uz.mbr.novustest.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_orderHistoryFragment"
            app:destination="@id/orderHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="uz.mbr.novustest.ui.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up">

        <action
            android:id="@+id/action_signUpFragment_to_verificationFragment"
            app:destination="@id/verificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderHistoryFragment"
        android:name="uz.mbr.novustest.ui.OrderHistoryFragment"
        android:label="fragment_order_history"
        tools:layout="@layout/fragment_order_history" />
    <fragment
        android:id="@+id/verificationFragment"
        android:name="uz.mbr.novustest.ui.VerificationFragment"
        android:label="fragment_verification"
        tools:layout="@layout/fragment_verification">
        <action
            android:id="@+id/action_verificationFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/verificationFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="phone_number"
            app:argType="string" />
    </fragment>
</navigation>